--- a/Quan_Ly/Quan_Ly/packages.config
+++ b/Quan_Ly/Quan_Ly/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EPPlus" version="4.5.3.3" targetFramework="net472" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net472" />
   <package id="SunnyUI" version="3.4.2" targetFramework="net472" />
   <package id="SunnyUI.Common" version="3.4.0" targetFramework="net472" />
