--- a/Quan_Ly/Quan_Ly/Quan_Ly.csproj
+++ b/Quan_Ly/Quan_Ly/Quan_Ly.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Design" />
     <Reference Include="System.Security" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -93,6 +94,7 @@
     <Compile Include="nhanVien.cs" />
     <Compile Include="panelKhoHang.cs" />
     <Compile Include="panelNhanVien.cs" />
+    <Compile Include="panelThongKe.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="formLogin.resx">
