--- a/Quan_Ly/Quan_Ly/Quan_Ly.csproj
+++ b/Quan_Ly/Quan_Ly/Quan_Ly.csproj
@@ -94,6 +94,12 @@
     <Compile Include="formMainAdmin.Designer.cs">
       <DependentUpon>formMainAdmin.cs</DependentUpon>
     </Compile>
+    <Compile Include="formQuenMatKhau.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formQuenMatKhau.Designer.cs">
+      <DependentUpon>formQuenMatKhau.cs</DependentUpon>
+    </Compile>
     <Compile Include="nguyenLieu.cs" />
     <Compile Include="nhanVien.cs" />
     <Compile Include="panelKhoHang.cs" />
@@ -109,6 +115,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="formMainAdmin.resx">
       <DependentUpon>formMainAdmin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formQuenMatKhau.resx">
+      <DependentUpon>formQuenMatKhau.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -173,6 +182,8 @@
     <None Include="bin\Debug\img\icon\Logo Tròn.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="bin\Debug\img\icon\eye.png" />
+    <None Include="bin\Debug\img\icon\eye-off.png" />
     <Content Include="icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
